WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146348
Network process hangs fetching disk cache entries
https://bugs.webkit.org/show_bug.cgi?id=146348
Summary
Network process hangs fetching disk cache entries
Antti Koivisto
Reported
2015-06-26 08:55:28 PDT
Main thread hang: 1000 WTF::RunLoop::performWork(void*) + 34 (JavaScriptCore + 6417650) [0x7fff99a4fcf2] 1000 WTF::RunLoop::performWork() + 696 (JavaScriptCore + 6416184) [0x7fff99a4f738] 1000 std::__1::__function::__func<WebKit::fetchDiskCacheEntries(WebCore::SessionID, std::__1::function<void (WTF::Vector<WebKit::WebsiteData::Entry, 0ul, WTF::CrashOnOverflow, 16ul>)>)::$_6::operator()(WebKit::NetworkCache::Entry const*) const::'lambda'(), std::__1::allocator<WebKit::fetchDiskCacheEntries(WebCore::SessionID, std::__1::function<void (WTF::Vector<WebKit::WebsiteData::Entry, 0ul, WTF::CrashOnOverflow, 16ul>)>)::$_6::operator()(WebKit::NetworkCache::Entry const*) const::'lambda'()>, void ()>::destroy_deallocate() + 43 (WebKit + 1040353) [0x7fff8dc41fe1] 1000 std::__1::__function::__func<WebKit::NetworkProcess::fetchWebsiteData(WebCore::SessionID, unsigned long long, unsigned long long)::$_2, std::__1::allocator<WebKit::NetworkProcess::fetchWebsiteData(WebCore::SessionID, unsigned long long, unsigned long long)::$_2>, void (WTF::Vector<WebKit::WebsiteData::Entry, 0ul, WTF::CrashOnOverflow, 16ul>)>::destroy_deallocate() + 18 (WebKit + 1043380) [0x7fff8dc42bb4] 1000 WebKit::NetworkProcess::fetchWebsiteData(WebCore::SessionID, unsigned long long, unsigned long long)::$_2::~$_2() + 839 (WebKit + 1036459) [0x7fff8dc410ab] 1000 WTF::RunLoop::dispatch(std::__1::function<void ()>) + 28 (JavaScriptCore + 6416492) [0x7fff99a4f86c] 1000 __psynch_mutexwait + 10 (libsystem_kernel.dylib + 94070) [0x7fff9a16df76] *1000 psynch_mtxcontinue + 0 (pthread + 25501) [0xffffff7f810ee39d]
Attachments
patch
(8.29 KB, patch)
2015-06-26 10:00 PDT
,
Antti Koivisto
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2015-06-26 10:00:11 PDT
Created
attachment 255643
[details]
patch
WebKit Commit Bot
Comment 2
2015-06-26 10:02:28 PDT
Attachment 255643
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WTF/RunLoop.cpp:41: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 3
2015-06-26 10:04:47 PDT
<
rdar://problem/21528072
>
Anders Carlsson
Comment 4
2015-06-26 10:51:51 PDT
Comment on
attachment 255643
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=255643&action=review
> Tools/TestWebKitAPI/Tests/WTF/RunLoop.cpp:40 > + struct Foo {
Please call this something else, like DispatchFromDestructorTester.
Antti Koivisto
Comment 5
2015-06-26 12:22:26 PDT
https://trac.webkit.org/r186006
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug