Network process hangs fetching disk cache entries https://bugs.webkit.org/show_bug.cgi?id=146348 <rdar://problem/21528072>

Reviewed by Anders Carlsson.

RunLoop::dispatch may deadlock if invoked with std::function that captures an object that calls RunLoop::dispatch in destructor.

* wtf/RunLoop.cpp:
(WTF::RunLoop::performWork):

    Don't reuse std::function variable in loop. We may end up destroying previously held std::function in assignment
    while holding the runloop mutex. With this change std::function is always destroyed with mutex unlocked.



Canonical link: https://commits.webkit.org/164439@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186006 268f45cc-cd09-0410-ab3c-d52691b4dbfc